--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,7 @@
                         <a href="mailto:loveofallblog@gmail.com" title="Send an Email" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
+                                <i class="fa fa-paper-plane fa-stack-1x fa-inverse"></i>
                             </span>
                         </a>
                     </li>
