--- a/_includes/share.html
+++ b/_includes/share.html
@@ -4,7 +4,7 @@
                   <li>
                         <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
-                                    <i class="fa fa-paper-plane" aria-hidden="true">
+                                    <i class="fa fa-envelope" aria-hidden="true">
                                     </i>
                         </a>
                   </li>
