adding link to manifest

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,7 @@
 
    <!-- Code below sets the metadata based on if it is the homepage or not -->
    {% if page.url == "/" %}
+   <link rel="manifest" href="manifest.json" />
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
    <!-- Bing site index verification code -->
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
