--- a/_layouts/newest-post.html
+++ b/_layouts/newest-post.html
@@ -46,13 +46,11 @@
 </head>
 
 <body>
+   {% include navigation.html %}
    <!-- Main Content -->
    <div class="container">
       <div class="row">
          <div id="posts" class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <a href="/">
-                                <i class="fa fa-house"></i> View all posts
-            </a>
             {{content}}
          </div>
       </div>
