--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,6 +11,10 @@ layout: default
 
 <hr>
 
+{% include comments.html %}
+
+<hr>
+
 <div class="alert alert-info text-center" role="alert">Want to learn more? Visit <a
     href="https://ComeUntoChrist.org">ComeUntoChrist.org</a> <span class="caption text-muted">(This site is not
     affiliated with ComeUntoChrist.org)</span></div>
