--- a/_includes/share.html
+++ b/_includes/share.html
@@ -2,8 +2,13 @@
             <ul class="list-inline text-center">
                   <!-- Email to a friend -->
                   <li>
+                              {% if page.subtitle != null %}
                         <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
+                                    {% else %}
+                                    <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.title }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
+                              target="_blank" title="Email to a Friend">
+                                    {% endif %}
                                     <i class="fa fa-envelope" aria-hidden="true">
                                     </i>
                         </a>
