added comments into a collapsible accordion

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -91,6 +91,8 @@
    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
    <!-- Theme JavaScript -->
    <script src="/assets/js/clean-blog.min.js"></script>
+   <!-- Accordion JavaScript -->
+   <script src="/assets/js/accordion.js"></script>
 </body>
 
 </html>
