--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <ul class="list-inline text-center">
                     <li>
-                        <a href="mailto:loveofallblog@gmail.com" title="Send an Email" target="_blank">
+                        <a href="mailto:loveofallblog@gmail.com" title="Send me an Email" target="_blank">
                             <span class="fa-stack fa-lg">
                                 <i class="fa fa-circle fa-stack-2x"></i>
                                 <i class="fa fa-paper-plane fa-stack-1x fa-inverse"></i>
