--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,6 +45,12 @@
    <meta property="og:title" content="{{ page.title }}" />
    <link rel="alternate" type="application/rss+xml" href="{{ site.url }}/feed.xml">
 
+<script>
+  if (typeof navigator.serviceWorker !== 'undefined') {
+    navigator.serviceWorker.register('sw.js')
+  }
+</script>
+   
    <title>{{ page.title }}</title>
    <!-- Bootstrap Core CSS (called from included html file so it is more easily updated in the future) -->
    {% include bootstrap.html %}
