Revert "adding shortcut icon"
This reverts commit 2de16e0716861e8e01dedea1a4ffb2033ee7769c.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
    <meta charset="utf-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1">
-   <link rel="manifest" href="/assets/pwa/manifest.json" />
+   <link rel="manifest" href="/pwa/manifest.json" />
    
    <!-- Code below sets the metadata based on if it is a blog post page or not -->
    {% if page.is_post %}
@@ -47,7 +47,7 @@
 
 <script>
   if (typeof navigator.serviceWorker !== 'undefined') {
-    navigator.serviceWorker.register('/assets/pwa/sw.js')
+    navigator.serviceWorker.register('/pwa/sw.js')
   }
 </script>
    
