--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 {% if page.image && page.url != "/" %}
 <header class="intro-header post-header" style="background-image: linear-gradient(0deg, #0000001f, #0000001f), url('/assets/images/headers/{{ page.image }}.webp');">
     {% else %}
-    <header class="intro-header" style="background-image: linear-gradient(0deg, #00000060, #00000000), url('/header-image.webp');">
+    <header class="intro-header">
         {% endif %}
         <div class="container">
             <div class="row">
