variables and dark mode
simplifying the CSS with variables, testing out a dark mode

--- a/_sass/accordion.scss
+++ b/_sass/accordion.scss
@@ -9,7 +9,7 @@ $background-color_3: white;
 // Colors styled with Bootstrap button class. Remove the class from post.html and uncomment below if you want custom colors.
 .accordion {
 	// background-color: $background-color_1;
-	// color: $color_1;
+	color: $color_1;
 	cursor: pointer;
 	padding: 18px;
 	width: 100%;
