more dark mode tweaks

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ layout: default
 <hr>
 
 <!-- accordions from https://www.w3schools.com/howto/howto_js_accordion.asp -->
-<button class="accordion btn btn-secondary">Comment</button>
+<button class="accordion btn btn-secondary theme-dark">Comment</button>
 <div class="panel">
   {% include comments.html %}
 </div>
