add: template for md content

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,7 @@
         <!-- Page Header-->
         {{ header }}}
         <!-- Main Content -->
-        <article class="mb-4">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
-                        { landing-page-content }
-                    </div>
-                </div>
-            </div>
-        </article>
-        
+        {{ md-content }}
         <!-- Footer-->
         {{ footer }}
         <!-- Bootstrap core JS-->
