update: refactor pyblog

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
         <!-- Navigation-->
         {{ navbar }}
         <!-- Page Header-->
-        {{ header }}}
+        {{ header }}
         <!-- Main Content -->
         {{ md-content }}
         <!-- Footer-->
