--- a/templates/header.html
+++ b/templates/header.html
@@ -3,7 +3,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
-                    <img src="https://raw.githubusercontent.com/soumik12345/geekyrakshit-blog/master/images/geekyrakshit.png">
+                    { portfolio-image }
                     <h1>{ name }</h1>
                     <span class="subheading">{ tagline }</span>
                 </div>
