--- a/templates/md-content.html
+++ b/templates/md-content.html
@@ -2,7 +2,7 @@
     <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
-                { landing-page-content }
+                { md-content }
             </div>
         </div>
     </div>
