--- a/_includes/share.html
+++ b/_includes/share.html
@@ -1,48 +1,51 @@
 <span>
-            <ul class="list-inline text-center">
-                  <!-- Email to a friend -->
-                  <li>
-                              {% if page.subtitle != null %}
-                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
+      <ul class="list-inline text-center">
+            <!-- Email article to a friend -->
+            <li>
+                  {% if page.subtitle != null %}
+                  <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:%0D%0A"
+                        target="_blank" title="Email to a Friend">
+                        {% else %}
+                        <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.title }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:%0D%0A"
                               target="_blank" title="Email to a Friend">
-                                    {% else %}
-                                    <a href="mailto:?subject={{ page.title }} - The Love of God and of All Men&body={{ page.title }}%0D%0A%0D%0A{{ site.url }}{{ page.url }}%0D%0A%0D%0AYour message:"
-                              target="_blank" title="Email to a Friend">
-                                    {% endif %}
-                                    <i class="fa fa-envelope" aria-hidden="true">
-                                    </i>
+                              {% endif %}
+                              <i class="fa fa-envelope" aria-hidden="true">
+                              </i>
                         </a>
-                  </li>
-                  <!-- Copy post URL (with checkmark icon after copy) -->
-                  <li>
-                        <a href="#" onclick="copyText()" title="Copy Post URL">
-                                     <i class="fa fa-link" id="copy-url" aria-hidden="true"></i>
-                              </span>
-                        </a>
-                        <script>
-                              function copyText() {
-                                    /* Copy text into clipboard */
-                                    navigator.clipboard.writeText
-                                          ("{{ site.url }}{{ page.url }}");
+            </li>
+            <!-- Copy post URL (with checkmark icon after copy) -->
+            <li>
+                  <a href="#" onclick="copyText()" title="Copy Post URL">
+                        <i class="fa fa-link" id="copy-url" aria-hidden="true"></i>
+</span>
+</a>
 
-                                    document.getElementById("copy-url").className = "fa fa-check";
-                                    document.getElementById("copy-url").style.color = "#03c04a";
-                              }
-                        </script>
-                  </li>
-                  <!-- Print page with printfriendly.com -->
-                  <li>
-                        <a href="#" onclick="printPage()" title="Print this Page">
-                                     <i class="fa fa-print" aria-hidden="true">
-                                    </i>
-                              </span>
-                        </a>
-                        <script>
-                              function printPage() {
-                                    javascript: (function () { if (window['priFri']) { window.print() } else { pfstyle = 'nbk'; pfBkVersion = '1'; _pnicer_script = document.createElement('SCRIPT'); _pnicer_script.type = 'text/javascript'; _pnicer_script.src = '//cdn.printfriendly.com/printfriendly.js'; document.getElementsByTagName('head')[0].appendChild(_pnicer_script); } })();
-                                    event.preventDefault();
-                              }
-                        </script>
-                  </li>
-            </ul>
+<!-- Copy article URL -->
+<script>
+      function copyText() {
+            /* Copy text into clipboard */
+            navigator.clipboard.writeText
+                  ("{{ site.url }}{{ page.url }}");
+
+            document.getElementById("copy-url").className = "fa fa-check";
+            document.getElementById("copy-url").style.color = "#03c04a";
+      }
+</script>
+</li>
+
+<!-- Print page with printfriendly.com -->
+<li>
+      <a href="#" onclick="printPage()" title="Print this Page">
+            <i class="fa fa-print" aria-hidden="true">
+            </i>
+            </span>
+      </a>
+      <script>
+            function printPage() {
+                  javascript: (function () { if (window['priFri']) { window.print() } else { pfstyle = 'nbk'; pfBkVersion = '1'; _pnicer_script = document.createElement('SCRIPT'); _pnicer_script.type = 'text/javascript'; _pnicer_script.src = '//cdn.printfriendly.com/printfriendly.js'; document.getElementsByTagName('head')[0].appendChild(_pnicer_script); } })();
+                  event.preventDefault();
+            }
+      </script>
+</li>
+</ul>
 </span>
