--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -7,7 +7,7 @@
             <span class="sr-only">Toggle navigation</span>
             Menu <i class="fa fa-bars"></i>
          </button>
-         <a class="navbar-brand" href="/">The Love of God and of All Men</a>
+         <a class="navbar-brand" href="/">Sharing His Love</a>
       </div>
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
