--- a/_includes/share-newest.html
+++ b/_includes/share-newest.html
@@ -3,10 +3,10 @@
                   <!-- Email to a friend -->
                   <li>
                                     {% if page.subtitle != null %}
-                        <a href="mailto:?subject={{ post.title }} - The Love of God and of All Men&body={{ post.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ post.url }}%0D%0A%0D%0AYour message:"
+                        <a href="mailto:?subject={{ post.title }} - Sharing His Love&body={{ post.subtitle }}%0D%0A%0D%0A{{ site.url }}{{ post.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
                                     {% else %}
-                                    <a href="mailto:?subject={{ post.title }} - The Love of God and of All Men&body={{ post.title }}%0D%0A%0D%0A{{ site.url }}{{ post.url }}%0D%0A%0D%0AYour message:"
+                                    <a href="mailto:?subject={{ post.title }} - Sharing His Love&body={{ post.title }}%0D%0A%0D%0A{{ site.url }}{{ post.url }}%0D%0A%0D%0AYour message:"
                               target="_blank" title="Email to a Friend">
                                     {% endif %}
                                     <i class="fa fa-envelope" aria-hidden="true">
