--- a/_includes/siteheading.html
+++ b/_includes/siteheading.html
@@ -1,5 +1,5 @@
 <div class="site-heading">
-    <h1>The Love of God and of All Men</h1>
+    <h1>Sharing His Love</h1>
     <hr class="small">
     <span class="subheading">Doing my best to spread God's love to everyone</span>
     <script type="text/javascript" src="/assets/js/clean-blog.min.js"></script>
