Revert "header and service worker updates. Service worker now shows offline page if page is not in cache and user is offline"
This reverts commit 6e9b8bd9540efcab449175f29190fd860cf3daa1.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include view-asl.html %}
+<h2 class="subheading"><em>{{ page.subtitle }}</em></h2>
 <hr class="subheading">
 {% include share.html %}
 
