fixing rich results json for Google

--- a/_includes/rich-results.html
+++ b/_includes/rich-results.html
@@ -4,7 +4,7 @@
       "@type": "BlogPosting",
       "mainEntityOfPage": {
         "@type": "WebPage",
-        "@id": "https://love-of-god-and-of-all-men.github.io/2023/10/23/the-words-of-isaiah.html"
+        "@id": "{{ site.url }}{{ page.url }}"
       },
       "headline": "{{ page.title }}",
       "description": "{{ page.subtitle }}",
