--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,9 @@
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <link rel="manifest" href="/manifest.json" />
 
-   <!-- Code below sets the metadata based on if it is a blog post page or not -->
    {% if page.is_post %}
    <meta name="description" content="{{ page.subtitle }}">
    <meta property="og:description" content="{{ page.subtitle }}" />
-
-   <!-- Below code not in current use -->
-   <!-- Inspired by https://shopify.github.io/liquid/filters/join/ -->
-   <!-- {% assign tags = page.tags %} -->
-   <!-- <meta name="keywords" content="{{ tags | join: ', ' }}"> -->
-
    <meta property="og:image"
       content="https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ page.image }}.webp" />
    <meta name="author" content="{{ page.author }}">
@@ -27,21 +20,15 @@
    <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
    {% endif %}
 
-   <!-- Code below sets the metadata based on if it is the homepage or not -->
    {% if page.url == "/" %}
    <meta name="google-site-verification" content="hlYP3FRvFCuR1tXGgIjeIddGUvDxcrxAUM87lp19mrI" />
-   <!-- Bing site index verification code -->
    <meta name="msvalidate.01" content="41C763BE2681A36D3DCB8CC46F33A20F" />
-   <!-- Include the keyboard shortcut code -->
    <script src="/assets/js/keyboard-shortcuts.js"></script>
-   {% else %}
    {% endif %}
 
    {% if page.noindex %}
    <meta name="robots" content="noindex">
    {% endif %}
-
-   <!-- Metadata that is the same regardless of the page -->
    <meta name="theme-color" content="#FFFFFF">
    <link rel="icon" href="/favicon-512x512.png" />
    <meta property="og:url" content="https://love-of-god-and-of-all-men.github.io{{ page.url }}" />
@@ -50,20 +37,17 @@
 
    <script>
       if (typeof navigator.serviceWorker !== 'undefined') {
-         navigator.serviceWorker.register('sw.js')
+         navigator.serviceWorker.register('sw.js');
       }
    </script>
 
    <title>{{ page.title }}</title>
-   <!-- Bootstrap Core CSS (called from included html file so it is more easily updated in the future) -->
+
    {% include bootstrap.html %}
-   <!-- Theme CSS -->
    <link href="/assets/css/clean-blog.min.css" rel="stylesheet">
-   <!-- Menu CSS -->
    <link href="/assets/css/menu.css" rel="stylesheet">
-   <!-- CSS for everything else -->
    <link rel="stylesheet" href="/assets/css/styles.css">
-   <!-- Custom Fonts -->
+
    {% include font-awesome.html %}
    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
       type='text/css'>
@@ -71,13 +55,10 @@
       href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
       rel='stylesheet' type='text/css'>
 
-   <!-- Include JavaScript in our posts (makes our ASL message stay closed for 30 days) -->
    {% if page.is_post %}
-   <!-- Commenting out for now because script does not exist. -->
-   <!-- <script src="/assets/js/message-close-cookie.js"></script> -->
-   <!-- Include rich results in our code so Google can display our posts with images and descriptions in search. -->
    {% include rich-results.html %}
    {% endif %}
+
    {% include print.html %}
 </head>
 
