--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,12 +47,7 @@
    <link href="/assets/css/menu.css" rel="stylesheet">
    <link rel="stylesheet" href="/assets/css/styles.css">
 
-   {% include font-awesome.html %}
-   <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet'
-      type='text/css'>
-   <link
-      href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
-      rel='stylesheet' type='text/css'>
+   {% include fonts.html %}
 
    {% if page.is_post %}
    {% include rich-results.html %}
