--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
    {% else %}
    <meta name="description" content="Doing my best to spread God's love to everyone">
    <meta property="og:description" content="Doing my best to spread God's love to everyone" />
-   <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/God-loves-you-chalk.jpg" />
+   <meta property="og:image" content="https://love-of-god-and-of-all-men.github.io/header-image.webp" />
    {% endif %}
 
    {% if page.url == "/" %}
