--- a/_includes/rich-results.html
+++ b/_includes/rich-results.html
@@ -1,4 +1,4 @@
-<script type="application/ld+json">
+<!-- <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "BlogPosting",
@@ -25,4 +25,42 @@
       "dateModified": "{{ page.updated | date: "%F %T %z" }}"
       {% endif %}
     }
-    </script>
+    </script> -->
+
+<script type="application/ld+json">
+      {
+        "@context": "http://schema.org",
+        "@type": "WebPage",
+        "mainEntityOfPage": {
+          "@type": "Blog",
+          "blogPost": [
+            {
+              "@type": "BlogPosting",
+              "headline": "{{ page.title }}",
+              "description": "{{ page.subtitle }}",
+              "image": [
+                {
+                  "@type": "ImageObject",
+                  "url": "https://love-of-god-and-of-all-men.github.io/assets/images/headers/{{ page.image }}.webp"
+                }
+              ],
+              "author": {
+                "@type": "Person",
+                "name": "{{ page.author.name }}"
+              },
+              "publisher": {
+                "@type": "Organization",
+                "name": "Sharing His Love",
+                "logo": {
+                  "@type": "ImageObject",
+                  "url": "https://love-of-god-and-of-all-men.github.io/favicon-512x512.png"
+                }
+              },
+              "datePublished": "{{ page.date | date: "%F %T %z" }}" {% if page.updated %},
+              "dateModified": "{{ page.updated | date: "%F %T %z" }}"
+              {% endif %}
+            }
+          ]
+        }
+      }
+      </script>
