--- a/_includes/rich-results.html
+++ b/_includes/rich-results.html
@@ -46,7 +46,7 @@
               ],
               "author": {
                 "@type": "Person",
-                "name": "{{ page.author.name }}"
+                "name": "{{ page.author }}"
               },
               "publisher": {
                 "@type": "Organization",
