First draft of share your light ideas for the homepage

--- a/_includes/siteheading.html
+++ b/_includes/siteheading.html
@@ -3,6 +3,7 @@
     <hr class="small">
     <span class="subheading">Doing my best to spread God's love to everyone</span>
     <script type="text/javascript" src="/assets/js/clean-blog.min.js"></script>
-    <p class="tip" id="quote">Loading Quote...</p>
-    <p class="tip"><a href="#" id="quote-share-link">Share Quote</a></p>
+    <p class="tip" id="quote">Loading Idea...</p>
+    <!-- <p class="tip"><a href="#" id="quote-share-link">Share Quote</a></p> -->
+    <p class="tip">Ideas on how to share your light from <a href="https://lighttheworld.org"></a>LightTheWorld.org</p>
 </div>
