link fix, second round of ideas up to #15

--- a/_includes/siteheading.html
+++ b/_includes/siteheading.html
@@ -5,5 +5,5 @@
     <script type="text/javascript" src="/assets/js/clean-blog.min.js"></script>
     <p class="tip" id="quote">Loading Idea...</p>
     <!-- <p class="tip"><a href="#" id="quote-share-link">Share Quote</a></p> -->
-    <p class="tip">Ideas on how to share your light from <a href="https://lighttheworld.org"></a>LightTheWorld.org</p>
+    <p class="tip">Ideas on how to share your light from <a href="https://lighttheworld.org">LightTheWorld.org</a></p>
 </div>
