--- a/_includes/offline-transparency.html
+++ b/_includes/offline-transparency.html
@@ -12,7 +12,7 @@
     // Function to update article transparency based on caching status
     function updateArticleTransparency() {
         // Replace 'article-id' with the actual identifier or logic you use to identify articles
-        var articleId = '{{ post.name }}';
+        var articleId = '{{ post.id }}';
         var articleContainers = document.querySelectorAll('.post-preview');
 
         articleContainers.forEach(function (articleContainer) {
