fixing syntax error

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,7 @@
                <!-- <script src="/assets/js/quote-share.js"></script> -->
                {% endif %}
                {{content}}
-               {% includes offline-transparency.html %}
+               {% include offline-transparency.html %}
             </div>
          </div>
       </div>
