moving script to the end

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -132,7 +132,6 @@
                <!-- <script src="/assets/js/quote-share.js"></script> -->
                {% endif %}
                {{content}}
-               {% include offline-transparency.html %}
             </div>
          </div>
       </div>
@@ -172,6 +171,8 @@
       <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
       <!-- Theme JavaScript -->
       <script src="/assets/js/clean-blog.min.js"></script>
+      <!-- Offline styling JavaScript trigger -->
+      {% include offline-transparency.html %}
       <!-- Accordion JavaScript -->
       <script src="/assets/js/accordion.js"></script>
 </body>
